# Patent-Filing-Platform-Builder

./: BUILD-PLATFORM.sh  I18N_DOCUMENTATION.md  RENDER_DEPLOYMENT_GUIDE.md  create-and-run.sh  i18n-comprehensive.js  i18n-dropdown.js  i18n-new.js  i18n.js  index-new.html  index.html  luma-ip-app.html  luma-ip-demo.html  luma-ip-features.js  luma-ip-main.html  render-minimal.yaml  render.yaml  test-i18n.html
assets/: script-new.js  style-new.css
pages/: api.html  features.html  pricing.html  product.html  security.html
pages/company/: about.html  blog.html  careers.html  contact.html
pages/legal/: compliance.html  cookie.html  privacy.html  terms.html
patent-platform/: .env.example  .gitignore  HOW_TO_RUN.md  Makefile  README.md  index.html  package-lock.json  package.json  start.sh  turbo.json
patent-platform/.github/workflows/: ci.yml
patent-platform/apps/api/: package.json
patent-platform/apps/web/: next-i18next.config.js  next.config.js  package.json  tsconfig.json
patent-platform/infra/prisma/: seed.ts  (+1 more)
patent-platform/services/agent/: pyproject.toml
patent-platform/services/agent/app/: __init__.py  main.py
patent-platform/services/agent/app/core/: config.py
patent-platform/services/agent/app/db/: models.py  session.py
patent-platform/services/agent/app/prompts/: claims.md  spec.md
patent-platform/services/agent/app/rag/: __init__.py  embeddings.py  search.py
patent-platform/services/agent/app/routes/: __init__.py  ingest.py  runs.py  search.py
patent-platform/services/agent/app/workers/: __init__.py  agent_tasks.py
styles/: pages.css
(+64 files in other folders)
