[tool.poetry]
name = "luma-ip-agent"
version = "1.0.0"
description = "AI-powered IP analysis and patent drafting agent service for LUMA IP"
authors = ["LUMA IP Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
sqlalchemy = "^2.0.25"
psycopg2-binary = "^2.9.9"
pgvector = "^0.2.4"
redis = "^5.0.1"
celery = {extras = ["redis"], version = "^5.3.4"}
httpx = "^0.26.0"
numpy = "^1.26.3"
pypdf = "^3.17.4"
python-multipart = "^0.0.6"
langgraph = "^0.0.20"
langchain = "^0.1.0"
langchain-openai = "^0.0.2"
langchain-anthropic = "^0.0.1"
openai = "^1.6.1"
anthropic = "^0.8.1"
tiktoken = "^0.5.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.9"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true